--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "author": "",
   "type": "commonjs",
   "main": "index.js",
-  "scripts": {
-    "dev": "nodemon server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+ "scripts": {
+  "build": "tsc", 
+  "start": "node dist/server.js",
+  "dev": "nodemon server.ts"
+},
   "devDependencies": {
     "@eslint/js": "^9.30.0",
     "@types/bcrypt": "^5.0.2",
