--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
   "author": "",
   "type": "commonjs",
   "main": "index.js",
- "scripts": {
-  "build": "tsc", 
-  "start": "node dist/server.js",
-  "dev": "nodemon server.ts"
-},
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "nodemon server.ts"
+  },
   "devDependencies": {
     "@eslint/js": "^9.30.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/http-errors": "^2.0.5",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.0.7",
+    "@types/node": "^24.0.10",
     "eslint": "^9.30.0",
     "globals": "^16.2.0",
     "nodemon": "^3.1.10",
