--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,15 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "rootDir": ".",           
-    "outDir": "dist",         
+    "lib": ["ES2020"],
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
     "esModuleInterop": true,
-    "strict": true
+    "resolveJsonModule": true,
+    "types": ["node"],
+    "skipLibCheck": true
   },
-  "include": ["server.ts"]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
