--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts" 
+    "dev": "nodemon src/server.ts" ,
+    "seed:admin": "ts-node src/script/seedAdmin.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.0",
