--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,9 @@
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "types": ["node"],
-    "skipLibCheck": true
+    "types": ["node", "express"],
+    "skipLibCheck": true,
+    "typeRoots": ["./src/types", "./node_modules/@types"]
   },
   "include": ["src"],
   "exclude": ["node_modules"]
