--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "license": "ISC",
   "author": "Rohit",
   "type": "commonjs",
-  "main": "dist/server.js",        
+  "main": "dist/server.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts" ,
+    "dev": "nodemon src/server.ts",
     "seed:admin": "ts-node src/script/seedAdmin.ts"
   },
   "devDependencies": {
@@ -19,7 +19,7 @@
     "@types/express": "^5.0.3",
     "@types/http-errors": "^2.0.5",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^22.0.0",     
+    "@types/node": "^22.0.0",
     "eslint": "^9.30.0",
     "globals": "^16.2.0",
     "nodemon": "^3.1.10",
@@ -32,8 +32,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
+    "socket.io": "^4.8.1",
     "zod": "^3.25.73"
   }
 }
